--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,6 @@
-[package]
-name = "iced-builder"
-description = "GUI builder for iced, built with iced."
-version = "0.1.0"
-edition = "2021"
-authors = ["pml68 <contact@pml68.me>"]
-repository = "https://github.com/pml68/iced-builder"
-license = "GPL-3.0-or-later"
-keywords = ["gui", "iced"]
-
-[dependencies]
-iced = { version = "0.12.1", features = [ "image","svg","canvas","qr_code","advanced","tokio","highlighter"] }
-iced_aw = { version = "0.9.3", default-features = false, features = ["menu","color_picker"] }
-tokio = { version = "1.40.0", features = ["fs"] }
-rust-format = "0.3.4"
-unique_id = "0.1.5"
+[workspace]
+resolver = "2"
+members = [
+  "iced_drop",
+  "iced_builder"
+]
