--- a/iced_builder/Cargo.toml
+++ b/iced_builder/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { version = "1.40.0", features = ["fs"] }
 rfd = "0.15.0"
 rust-format = "0.3.4"
 unique_id = "0.1.5"
+indexmap = { version = "2.6.0", features = ["serde"] }
 
 [[bin]]
 name = "iced-builder"
