feat: implement `std::error::Error` for custom `Error` enum

--- a/iced_builder/Cargo.toml
+++ b/iced_builder/Cargo.toml
@@ -19,6 +19,7 @@ rfd = "0.15.0"
 rust-format = "0.3.4"
 unique_id = "0.1.5"
 indexmap = { version = "2.6.0", features = ["serde"] }
+thiserror = "1.0.65"
 
 [[bin]]
 name = "iced-builder"
