--- a/iced_builder/Cargo.toml
+++ b/iced_builder/Cargo.toml
@@ -12,14 +12,18 @@ keywords = ["gui", "iced"]
 iced = { version = "0.13.1", features = [ "image","svg","canvas","qr_code","advanced","tokio","highlighter"] }
 iced_aw = { version = "0.11.0", default-features = false, features = ["menu","color_picker"] }
 iced_drop = { path = "../iced_drop" }
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-tokio = { version = "1.40.0", features = ["fs"] }
-rfd = "0.15.0"
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
+tokio = { version = "1.41.0", features = ["fs"] }
+rfd = { version = "0.15.0", default-features = false, features = ["async-std", "gtk3"]  }
 rust-format = "0.3.4"
 unique_id = "0.1.5"
 indexmap = { version = "2.6.0", features = ["serde"] }
 thiserror = "1.0.65"
+
+[target.'cfg(windows)'.build-dependencies]
+embed-resource = "2.5.0"
+windows_exe_info = "0.4"
 
 [[bin]]
 name = "iced-builder"
