--- a/iced_builder/Cargo.toml
+++ b/iced_builder/Cargo.toml
@@ -11,19 +11,22 @@ keywords = ["gui", "iced"]
 [dependencies]
 iced = { version = "0.13.1", features = [ "image","svg","canvas","qr_code","advanced","tokio","highlighter"] }
 iced_aw = { version = "0.11.0", default-features = false, features = ["menu","color_picker"] }
-iced_anim = { version = "0.1.4", features = ["derive", "serde"] }
+iced_anim = { git = "https://github.com/pml68/iced_anim", branch = "main", features = ["derive", "serde"] }
 iced_drop = { path = "../iced_drop" }
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
-tokio = { version = "1.41.0", features = ["fs"] }
-rfd = { version = "0.15.0", default-features = false, features = ["async-std", "gtk3"]  }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+tokio = { version = "1.42.0", features = ["fs"] }
+rfd = { version = "0.15.1", default-features = false, features = ["async-std", "gtk3"]  }
 rust-format = "0.3.4"
 unique_id = "0.1.5"
-indexmap = { version = "2.6.0", features = ["serde"] }
-thiserror = "1.0.65"
+indexmap = { version = "2.7.0", features = ["serde"] }
+thiserror = "2.0.5"
+
+[build-dependencies]
+iced_fontello = "0.13.0"
 
 [target.'cfg(windows)'.build-dependencies]
-embed-resource = "2.5.0"
+embed-resource = "3.0.1"
 windows_exe_info = "0.4"
 
 [[bin]]
