--- a/iced_builder/Cargo.toml
+++ b/iced_builder/Cargo.toml
@@ -3,7 +3,7 @@ name = "iced_builder"
 description = "GUI builder for iced, built with iced."
 version = "0.1.0"
 edition = "2021"
-authors = ["pml68 <contact@pml68.me>"]
+authors = ["pml68 <contact@pml68.dev>"]
 repository = "https://github.com/pml68/iced-builder"
 license = "GPL-3.0-or-later"
 keywords = ["gui", "iced"]
@@ -11,19 +11,18 @@ keywords = ["gui", "iced"]
 [dependencies]
 iced = { version = "0.13.1", features = [ "image","svg","canvas","qr_code","advanced","tokio","highlighter"] }
 iced_aw = { version = "0.11.0", default-features = false, features = ["menu","color_picker"] }
-iced_anim = { git = "https://github.com/pml68/iced_anim", branch = "main", features = ["derive", "serde"] }
+iced_anim = { version = "0.1.4", features = ["derive", "serde"] }
 iced_drop = { path = "../iced_drop" }
-serde = { version = "1.0.215", features = ["derive"] }
+serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
 tokio = { version = "1.42.0", features = ["fs"] }
 rfd = { version = "0.15.1", default-features = false, features = ["async-std", "gtk3"]  }
 rust-format = "0.3.4"
 unique_id = "0.1.5"
-indexmap = { version = "2.7.0", features = ["serde"] }
-thiserror = "2.0.5"
+thiserror = "2.0.6"
 
 [build-dependencies]
-iced_fontello = "0.13.0"
+iced_fontello = "0.13.1"
 
 [target.'cfg(windows)'.build-dependencies]
 embed-resource = "3.0.1"
