--- a/iced_builder/Cargo.toml
+++ b/iced_builder/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["gui", "iced"]
 
 [dependencies]
 iced = { version = "0.13.1", features = [ "image","svg","canvas","qr_code","advanced","tokio","highlighter"] }
-iced_aw = { version = "0.11.0", default-features = false, features = ["menu","color_picker"] }
+# iced_aw = { version = "0.11.0", default-features = false, features = ["menu","color_picker"] }
 iced_anim = { version = "0.1.4", features = ["derive", "serde"] }
 iced_drop = { path = "../iced_drop" }
 serde = { version = "1.0.216", features = ["derive"] }
