--- a/iced_builder/Cargo.toml
+++ b/iced_builder/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["gui", "iced"]
 [dependencies]
 iced = { version = "0.13.1", features = [ "image","svg","canvas","qr_code","advanced","tokio","highlighter"] }
 # iced_aw = { version = "0.11.0", default-features = false, features = ["menu","color_picker"] }
-iced_anim = { version = "0.1.4", features = ["derive", "serde"] }
+iced_anim = { version = "0.2.0", features = ["derive"] }
 iced_drop = { path = "../iced_drop" }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
@@ -21,9 +21,12 @@ tokio-stream = { version = "0.1", features = ["fs"] }
 rfd = { version = "0.15.1", default-features = false, features = ["async-std", "gtk3"]  }
 rust-format = "0.3.4"
 uuid = { version = "1.11.0", features = ["v4", "serde"] }
+fxhash = "0.2.1"
 thiserror = "2.0.9"
-xdg = "2.5.2"
 dirs-next = "2.0.0"
+
+[target.'cfg(macos)'.dependencies]
+xdg = "2.5.2"
 
 [build-dependencies]
 iced_fontello = "0.13.1"
