--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build iced-builder binary
       run: cargo build --verbose --release
     - name: Archive iced-builder binary
-      if: matrix.toolchain == "stable"
+      if: matrix.toolchain == 'stable'
       uses: actions/upload-artifact@v4
       with:
         name: iced-builder-x86_64-unknown-linux-gnu
