--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,6 @@
 [alias]
 lint = "clippy --no-deps -- -D warnings"
 lint-all = "clippy --no-deps -- -D clippy::pedantic"
+
+[build]
+rustflags = ["-Z", "threads=6"]
