--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toolchain: [stable, nightly]
+        rust-version: [stable, nightly]
     steps:
     - uses: hecrj/setup-rust-action@v2
       with:
-        rust-version: ${{ matrix.toolchain }}
+        rust-version: ${{ matrix.rust-version }}
     - uses: actions/checkout@master
     - name: Install dependencies
       run: |
@@ -23,7 +23,7 @@ jobs:
     - name: Build iced-builder binary
       run: cargo build --verbose --release
     - name: Archive iced-builder binary
-      if: matrix.toolchain == 'stable'
+      if: matrix.rust-version == 'stable'
       uses: actions/upload-artifact@v4
       with:
         name: iced-builder-x86_64-unknown-linux-gnu
