--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 name = "iced_builder"
 description = "UI builder for iced, built with iced."
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 authors = ["pml68 <contact@pml68.dev>"]
 repository = "https://github.com/pml68/iced-builder"
 license = "GPL-3.0-or-later"
 categories = ["gui"]
 keywords = ["gui", "ui", "graphics", "interface", "widgets"]
+rust-version = "1.85.0"
 
 [dependencies]
 iced.workspace = true
@@ -62,7 +63,6 @@ members = ["iced_drop"]
 
 [lints.rust]
 missing_debug_implementations = "deny"
-# missing_docs = "deny"
 unsafe_code = "deny"
 unused_results = "deny"
 
@@ -80,6 +80,3 @@ from_over_into = "deny"
 needless_borrow = "deny"
 new_without_default = "deny"
 useless_conversion = "deny"
-
-[lints.rustdoc]
-broken_intra_doc_links = "forbid"
