ci: add caching, use mold for linking

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,9 +2,9 @@
 lint = "clippy --no-deps -- -D warnings"
 lint-all = "clippy --no-deps -- -D clippy::pedantic"
 
-# [target.x86_64-unknown-linux-gnu]
-# linker = "clang"
-# rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 
 # [build]
 # rustflags = ["-Z", "threads=6"]
