--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,18 @@ jobs:
       run: |
         export DEBIAN_FRONTED=noninteractive
         sudo apt-get -qq update
-        sudo apt-get install -y libxkbcommon-dev libgtk-3-dev
+        sudo apt-get install -y libxkbcommon-dev libgtk-3-dev clang mold
+    - uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Build iced-builder binary
-      run: cargo build --verbose --release
+      run: cargo build --verbose --profile ci
     - name: Archive iced-builder binary
       if: matrix.rust-version == 'stable'
       uses: actions/upload-artifact@v4
