--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,17 @@ jobs:
       run: |
         export DEBIAN_FRONTED=noninteractive
         sudo apt-get -qq update
-        sudo apt-get install -y libxkbcommon-dev libgtk-3-dev
+        sudo apt-get install -y libxkbcommon-dev libgtk-3-dev clang mold
+    - uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Check lints
-      run: cargo lint
+      run: cargo lint --profile ci
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose --profile ci
