--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: iced-builder-x86_64-unknown-linux-gnu
-        path: target/release/iced-builder
+        path: target/ci/iced-builder
