--- a/assets/themes/dark.toml
+++ b/assets/themes/dark.toml
@@ -1,31 +1,33 @@
 name = "Dark"
 
+shadow = "#000000"
+
 [primary]
-primary = "#6200ee"
+color = "#6200ee"
 on_primary = "#ffffff"
 primary_container = "#3700b3"
 on_primary_container = "#ffffff"
 
 [secondary]
-secondary = "#03dac6"
+color = "#03dac6"
 on_secondary = "#ffffff"
 secondary_container = "#018786"
 on_secondary_container = "#ffffff"
 
 [tertiary]
-tertiary = "#bb86fc"
+color = "#bb86fc"
 on_tertiary = "#000000"
 tertiary_container = "#6200ee"
 on_tertiary_container = "#000000"
 
 [error]
-error = "#b00020"
+color = "#b00020"
 on_error = "#ffffff"
 error_container = "#cf6679"
 on_error_container = "#000000"
 
 [surface]
-surface = "#121212"
+color = "#121212"
 on_surface = "#ffffff"
 on_surface_variant = "#b0b0b0"
 
@@ -42,5 +44,5 @@ inverse_on_surface = "#ffffff"
 inverse_primary = "#bb86fc"
 
 [outline]
-outline = "#737373"
-outline_variant = "#aaaaaa"
+color = "#737373"
+variant = "#aaaaaa"
