--- a/material_theme/Cargo.toml
+++ b/material_theme/Cargo.toml
@@ -11,11 +11,20 @@ categories = ["gui"]
 keywords = ["gui", "ui", "graphics", "interface", "widgets"]
 rust-version = "1.85"
 
+[features]
+default = []
+animate = ["dep:iced_anim"]
+
 [dependencies]
 iced_widget = "0.14.0-dev"
 serde.workspace = true
 toml.workspace = true
 dark-light = "2.0.0"
+
+[dependencies.iced_anim]
+workspace = true
+features = ["derive"]
+optional = true
 
 [lints.rust]
 unsafe_code = "deny"
