feat(material_theme): implement Catalog for iced_dialog (`dialog` feature)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ iced.workspace = true
 iced_anim.workspace = true
 iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
 iced_drop = { path = "iced_drop" }
-iced_dialog = { git = "https://github.com/pml68/iced_dialog", branch = "iced/personal" }
+iced_dialog.workspace = true
 material_theme = { path = "material_theme" }
 serde.workspace = true
 serde_json = "1.0.140"
@@ -36,6 +36,7 @@ dirs-next = "2.0.0"
 
 [workspace.dependencies]
 iced_anim = { version = "0.2.1", features = ["derive"] }
+iced_dialog = { git = "https://github.com/pml68/iced_dialog", branch = "iced/personal" }
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.20"
 
