--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ material_theme = { path = "material_theme" }
 serde.workspace = true
 serde_json = "1.0.140"
 toml.workspace = true
-tokio = { version = "1.42.1", features = ["fs"] }
+tokio = { version = "1.44.2", features = ["fs"] }
 tokio-stream = { version = "0.1", features = ["fs"] }
 # TODO: enable tokio when it actually compiles
 # rfd = { version = "0.15.2", default-features = false, features = ["tokio", "xdg-portal"]  }
@@ -43,7 +43,7 @@ toml = "0.8.20"
 [workspace.dependencies.iced]
 git = "https://github.com/pml68/iced"
 branch = "feat/rehighlight-on-redraw"
-features = ["image", "svg", "advanced", "tokio"]
+features = ["image", "svg", "advanced", "tokio", "lazy"]
 
 [build-dependencies]
 iced_fontello = "0.13.2"
