feat(material_theme): implement `pick_list::Catalog`

--- a/material_theme/Cargo.toml
+++ b/material_theme/Cargo.toml
@@ -30,6 +30,7 @@ features = ["derive"]
 optional = true
 
 [lints.rust]
+missing_debug_implementations = "deny"
 unsafe_code = "deny"
 unused_results = "deny"
 
