--- a/theme_test/Cargo.toml
+++ b/theme_test/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2024"
 
 [dependencies]
 iced.workspace = true
-material_theme = { path = "../material_theme" }
+iced_anim.workspace = true
+iced_dialog.workspace = true
+material_theme = { path = "../material_theme", features = ["dialog", "animate"] }
