--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ debug = ["iced/debug"]
 iced.workspace = true
 iced_anim.workspace = true
 iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
-iced_drop = { path = "iced_drop" }
+iced_drop = { path = "crates/iced_drop" }
 iced_dialog.workspace = true
-material_theme = { path = "material_theme" }
+material_theme = { path = "crates/material_theme" }
 serde.workspace = true
 serde_json = "1.0.140"
 toml.workspace = true
@@ -74,7 +74,8 @@ name = "iced-builder"
 path = "src/main.rs"
 
 [workspace]
-members = ["iced_drop", "material_theme", "theme_test"]
+members = ["crates/*", "theme_test"]
+default-members = ["crates/material_theme", "."]
 
 [lints.rust]
 missing_debug_implementations = "deny"
