feat: use `pane_grid::Controls` for PaneGrid titlebar controls

--- a/fonts/icons.toml
+++ b/fonts/icons.toml
@@ -4,3 +4,4 @@ module = "icon"
 save = "entypo-floppy"
 open = "fontawesome-folder-open-empty"
 copy = "fontawesome-file-code"
+switch = "entypo-switch"
