refactor(material_theme): make `Theme` `Copy`, add `Theme::ALL` constant

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ from_over_into = "deny"
 needless_borrow = "deny"
 new_without_default = "deny"
 useless_conversion = "deny"
+clone_on_copy = "deny"
 
 [patch.crates-io]
 iced_anim = { git = "https://github.com/pml68/iced_anim" }
