--- a/crates/material_theme/Cargo.toml
+++ b/crates/material_theme/Cargo.toml
@@ -21,6 +21,8 @@ animate = ["dep:iced_anim"]
 dialog = ["dep:iced_dialog"]
 # Provides support for the markdown widget.
 markdown = ["iced_widget/markdown"]
+# Provides support for the image widget.
+image = ["iced_widget/image"]
 # Provides support for the SVG widget.
 svg = ["iced_widget/svg"]
 # Provides support for the QR code widget.
