--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ iced_anim.workspace = true
 iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
 iced_drop = { path = "crates/iced_drop" }
 iced_dialog.workspace = true
-material_theme = { path = "crates/material_theme" }
+material_theme = { path = "crates/material_theme", features = ["animate", "serde", "dialog", "image", "svg"] }
 serde.workspace = true
 serde_json = "1.0.140"
 toml.workspace = true
@@ -38,16 +38,16 @@ dirs-next = "2.0.0"
 iced_anim = { version = "0.2.1", features = ["derive"] }
 iced_dialog = { git = "https://github.com/pml68/iced_dialog", branch = "iced/personal" }
 serde = { version = "1.0.219", features = ["derive"] }
-toml = "0.8.20"
+toml = "0.8.21"
 
 [workspace.dependencies.iced]
 git = "https://github.com/pml68/iced"
 branch = "feat/rehighlight-on-redraw"
 default-features = false
-features = ["wgpu", "tiny-skia", "web-colors", "auto-detect-theme", "image", "svg", "advanced", "tokio", "lazy"]
+features = ["wgpu", "tiny-skia", "web-colors", "auto-detect-theme", "advanced", "tokio", "image", "svg", "lazy"]
 
 [build-dependencies]
-iced_fontello = "0.13.2"
+iced_fontello = { path = "crates/iced_fontello" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 xdg = "2.5.2"
