--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         export DEBIAN_FRONTED=noninteractive
         sudo apt-get -qq update
-        sudo apt-get install -y libxkbcommon-dev libgtk-3-dev clang mold
+        sudo apt-get install -y libxkbcommon-dev clang mold
     - uses: actions/cache@v4
       with:
         path: |
