--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,13 @@ iced_anim.workspace = true
 iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
 iced_drop = { path = "crates/iced_drop" }
 iced_dialog.workspace = true
-material_theme = { path = "crates/material_theme", features = ["animate", "serde", "dialog", "image", "svg"] }
+material_theme = { path = "crates/material_theme", features = ["animate", "serde", "dialog", "svg"] }
 serde.workspace = true
 serde_json = "1.0.140"
 toml.workspace = true
 tokio = { version = "1.44.2", features = ["fs"] }
 tokio-stream = { version = "0.1", features = ["fs"] }
-# TODO: enable tokio when it actually compiles
+# TODO: enable tokio when it doesn't crash anymore
 # rfd = { version = "0.15.2", default-features = false, features = ["tokio", "xdg-portal"]  }
 rfd = "0.15.3"
 rust-format = "0.3.4"
