--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ material_theme = { path = "crates/material_theme", features = ["animate", "serde
 serde.workspace = true
 serde_json = "1.0.140"
 toml.workspace = true
-tokio = { version = "1.45.1", features = ["fs"] }
+tokio = { version = "1.45.1", features = ["fs", "io-util"] }
 tokio-stream = { version = "0.1", features = ["fs"] }
 # TODO: enable tokio when it doesn't crash anymore
 # rfd = { version = "0.15.2", default-features = false, features = ["tokio", "xdg-portal"]  }
