ci: separate `Lint` and `Test` workflows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,16 +55,21 @@ windows_exe_info = "0.5"
 [profile.dev]
 opt-level = 1
 
-[profile.ci]
-inherits = "dev"
-opt-level = 0
-
 [profile.dev.package."*"]
 opt-level = 3
 
 [profile.release]
 lto = true
 strip = true
+
+[profile.release-opt]
+inherits = "release"
+codegen-units = 1
+debug = false
+incremental = false
+opt-level = 3
+overflow-checks = false
+strip = "debuginfo"
 
 [[bin]]
 name = "iced-builder"
