--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,10 @@ jobs:
           target/
         key: ${{ runner.os }}-build-${{ matrix.rust-version }}-${{ hashFiles('**/Cargo.lock') }}
     - name: Build iced-builder binary
-      run: cargo build --verbose --release
+      run: cargo build --verbose --profile release-opt
     - name: Archive iced-builder binary
       if: matrix.rust-version == 'stable'
       uses: actions/upload-artifact@v4
       with:
         name: iced-builder-x86_64-unknown-linux-gnu
-        path: target/ci/iced-builder
+        path: target/release-opt/iced-builder
