--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
-name: CI
+name: Lint
 on: [push, pull_request]
 jobs:
-  ci:
+  all:
     runs-on: ubuntu-latest
     steps:
     - uses: hecrj/setup-rust-action@v2
@@ -24,5 +24,3 @@ jobs:
         key: ${{ runner.os }}-ci-${{ hashFiles('**/Cargo.lock') }}
     - name: Check lints
       run: cargo lint
-    - name: Run tests
-      run: cargo test --verbose --profile ci
