chore: remove "GTK" category from linux desktop entry [skip ci]

--- a/assets/linux/dev.pml68.iced-builder.desktop
+++ b/assets/linux/dev.pml68.iced-builder.desktop
@@ -7,5 +7,5 @@ TryExec=iced-builder
 Exec=iced-builder %f
 Terminal=false
 MimeType=application/json;
-Categories=GTK;GUIDesigner;Development;
+Categories=iced;GUIDesigner;Development;
 Keywords=iced;GUI;builder;designer;
