feat: extract `material_theme` into separate repo (`pml68/iced_material`)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ iced_anim.workspace = true
 iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
 iced_drop = { git = "https://github.com/pml68/iced_drop", branch = "iced/personal" }
 iced_dialog.workspace = true
-material_theme = { path = "crates/material_theme", features = ["animate", "serde", "dialog", "svg"] }
+iced_material = { path = "../iced_material", features = ["animate", "serde", "dialog", "svg"] }
 serde.workspace = true
 serde_json = "1.0.140"
 toml.workspace = true
@@ -43,7 +43,7 @@ default-features = false
 features = ["wgpu", "tiny-skia", "web-colors", "advanced", "tokio", "image", "svg", "lazy"]
 
 [build-dependencies]
-iced_fontello = { path = "crates/iced_fontello" }
+iced_fontello = { path = "iced_fontello" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 xdg = "3.0.0"
@@ -76,8 +76,8 @@ name = "iced-builder"
 path = "src/main.rs"
 
 [workspace]
-members = ["crates/*"]
-default-members = [".", "crates/material_theme"]
+members = ["iced_fontello"]
+default-members = ["."]
 
 [lints.rust]
 missing_debug_implementations = "deny"
