--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ iced_anim.workspace = true
 iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
 iced_drop = { git = "https://github.com/pml68/iced_drop", branch = "iced/personal" }
 iced_dialog.workspace = true
-iced_material = { path = "../iced_material", features = ["animate", "serde", "dialog", "svg"] }
+iced_material = { git = "https://github.com/pml68/iced_material", branch = "iced/personal", features = ["animate", "serde", "dialog", "svg"] }
 serde.workspace = true
 serde_json = "1.0.140"
 toml.workspace = true
