--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test
 on: [push, pull_request]
 jobs:
-  all:
+  test:
     runs-on: ubuntu-latest
     env:
       RUSTFLAGS: --deny warnings
