--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: -C linker=clang -C link-arg=-fuse-ld=mold
     strategy:
       fail-fast: false
       matrix:
@@ -22,6 +24,7 @@ jobs:
         sudo apt-get -qq update
         sudo apt-get install -y libxkbcommon-dev clang mold
     - uses: actions/cache@v4
+      if: matrix.rust-version != 'nightly'
       with:
         path: |
           ~/.cargo/bin/
