--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
       run: |
         export DEBIAN_FRONTED=noninteractive
         sudo apt-get -qq update
-        sudo apt-get install -y libxkbcommon-dev clang mold
+        sudo apt-get install -y libxkbcommon-dev
     - uses: actions/cache@v4
       with:
         path: |
