--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,17 @@ rust-version.workspace = true
 
 [dependencies]
 iced.workspace = true
+iced.features = [
+  "wgpu",
+  "tiny-skia",
+  "web-colors",
+  "advanced",
+  "tokio",
+  "image",
+  "svg",
+  "lazy",
+]
+
 iced_anim.workspace = true
 iced_dialog.workspace = true
 iced_drop.workspace = true
@@ -60,11 +71,26 @@ keywords = ["gui", "ui", "graphics", "interface", "widgets"]
 rust-version = "1.88.0"
 
 [workspace.dependencies]
+iced.version = "0.14.0-dev"
+iced.default-features = false
+
 iced_widget = "0.14.0-dev"
-iced_anim = { git = "https://github.com/pml68/iced_anim", features = ["derive"] }
-iced_dialog = { git = "https://github.com/pml68/iced_dialog", branch = "iced/personal" }
-iced_drop = { git = "https://github.com/pml68/iced_drop", branch = "iced/personal" }
-iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
+
+iced_material.git = "https://github.com/pml68/iced_material"
+iced_material.branch = "iced/personal"
+iced_material.features = ["animate", "serde", "dialog", "svg"]
+
+iced_anim.git = "https://github.com/pml68/iced_anim"
+iced_anim.features = ["derive"]
+
+iced_dialog.git = "https://github.com/pml68/iced_dialog"
+iced_dialog.branch = "iced/personal"
+
+iced_drop.git = "https://github.com/pml68/iced_drop"
+iced_drop.branch = "iced/personal"
+
+iced_custom_highlighter.git = "https://github.com/pml68/iced_custom_highlighter"
+
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 toml = "0.9.2"
@@ -75,16 +101,6 @@ rust-format = "0.3.4"
 fxhash = "0.2.1"
 thiserror = "2.0.12"
 dirs-next = "2.0.0"
-
-[workspace.dependencies.iced]
-version = "0.14.0-dev"
-default-features = false
-features = ["wgpu", "tiny-skia", "web-colors", "advanced", "tokio", "image", "svg", "lazy"]
-
-[workspace.dependencies.iced_material]
-git = "https://github.com/pml68/iced_material"
-branch = "iced/personal"
-features = ["animate", "serde", "dialog", "svg"]
 
 [profile.dev]
 opt-level = 1
